# capture-output

./: CHANGES.md  LICENSE  README.md  capture-output.opam  dune-project  out-channel-redirect.opam
.github/workflows/: build.yml  changelog.yml
src/: capture_output.ml  capture_output.mli  capture_output_stubs.c  dune  out_channel_redirect.ml  out_channel_redirect.mli  out_channel_redirect_stubs.c  runtime.js  runtime.wat
test/: basic.ml  capture_output_test_helper.ml  capture_output_test_stubs.c  dune  out_channel_redirect_test_helper.ml  out_channel_redirect_test_stubs.c  runtime.js  runtime.wat
