opam-version: "2.0"
maintainer:   "hugo.heuzard@gmail.com"
authors:      "Hugo Heuzard"
homepage:     "https://github.com/hhugo/capture-output"
doc:          "https://hhugo.github.io/capture-output/"
bug-reports:  "https://github.com/hhugo/capture-output/issues"
dev-repo:     "git+https://github.com/hhugo/capture-output.git"
license:      "MIT"

build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "ocaml" {>= "4.06.1"}
  "dune" {>= "2.0"}
  "ocamlformat"  { = "0.24.1" & with-test }
  "js_of_ocaml"  { with-test }
]

synopsis: "TODO"
description: """
TODO
"""
