opam-version: "2.0"
maintainer:   "hugo.heuzard@gmail.com"
authors:      "Hugo Heuzard"
homepage:     "https://github.com/hhugo/capture-output"
doc:          "https://hhugo.github.io/capture-output/"
bug-reports:  "https://github.com/hhugo/capture-output/issues"
dev-repo:     "git+https://github.com/hhugo/capture-output.git"
license:      "MIT"

build: [["dune" "build" "-p" name "-j" jobs]]

depends: [
  "ocaml" {>= "4.06.1"}
  "dune" {>= "3.17"}
  "ocamlformat"  { = "0.28.1" & with-test }
  "js_of_ocaml"  { with-test }
  "wasm_of_ocaml-compiler"  { with-test }
]

synopsis: "Capture output written to out_channels"
description: """
An OCaml library for capturing output written to out_channels, with support
for native, JavaScript (js_of_ocaml), and WebAssembly (wasm_of_ocaml) targets.
"""
