(library
 (name capture_output_test_helper)
 (modules capture_output_test_helper)
 (foreign_stubs
  (language c)
  (names capture_output_test_stubs))
 (js_of_ocaml
  (javascript_files runtime.js))
 (wasm_of_ocaml
  (javascript_files runtime.js)
  (wasm_files runtime.wat)))

(test
 (name basic)
 (modules
  (:standard \ capture_output_test_helper))
 (modes native js wasm)
 (libraries capture-output capture_output_test_helper))

(env
 (_
  (wasm_of_ocaml
   (enabled_if %{env:WASM_OF_OCAML=false})
   (runtest_alias runtest-wasm))))
