(library
 (name out_channel_redirect_test_helper)
 (modules out_channel_redirect_test_helper)
 (foreign_stubs
  (language c)
  (names out_channel_redirect_test_stubs))
 (js_of_ocaml
  (javascript_files runtime.js))
 (wasm_of_ocaml
  (javascript_files runtime.js)
  (wasm_files runtime.wat)))

(test
 (name basic)
 (modules
  (:standard \ out_channel_redirect_test_helper))
 (modes native js wasm)
 (libraries out-channel-redirect out_channel_redirect_test_helper))

(env
 (_
  (wasm_of_ocaml
   (enabled_if %{env:WASM_OF_OCAML=false})
   (runtest_alias runtest-wasm))))
